--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,9 @@
+buildscript {
+    dependencies {
+        classpath files('show-date/build/libs/show-date-1.0-SNAPSHOT.jar')
+    }
+}
+
 // Plugins
 plugins {
     id 'java'
@@ -14,6 +20,9 @@ repositories {
     mavenCentral()
 }
 
+apply plugin: 'project-report'
+apply plugin: 'show-date-plugin'
+
 // External dependencies
 dependencies {
     // Compile
@@ -22,21 +31,4 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
-apply plugin: 'project-report'
 
-// Classes
-class ShowDate extends DefaultTask {
-    String dateMessage = "Date is: "
-
-    @TaskAction
-    void showDate() {
-        println dateMessage + new Date()
-    }
-}
-
-// Tasks
-task showDate(type: ShowDate)
-
-task custommShowDate(type: ShowDate) {
-    dateMessage = "Custom time is: " + new Date().format("HH:mm:ss") + "\n"
-}
